<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/plastinysus"
            android:id="@+id/plastinysus"
            android:icon="@drawable/plastinysus"/>
        <item android:title="@string/vintydlyaplastinsus"
            android:id="@+id/id_na"
            android:icon="@drawable/ic_na"/>
        <item android:title="@string/plastinybezus"
            android:id="@+id/id_sna"
            android:icon="@drawable/ic_sna"/>
        <item android:title="@string/vintydlyaosteo"
            android:id="@+id/id_history"
            android:icon="@drawable/ic_history"/>
        <item android:title="@string/instrumentdlyaustanovki"
            android:id="@+id/id_histor"
            android:icon="@drawable/ic_history"/>
        <item android:title="@string/komplektuushiedlyailizar"
            android:id="@+id/id_histo"
            android:icon="@drawable/ic_history"/>
        <item android:title="@string/shtiftyisterzhny"
            android:id="@+id/id_hist"
            android:icon="@drawable/ic_history"/>









    </group>
</menu>